--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand pl-0 navbar-light bg-light">
   <a class="navbar-brand" routerLink="dashboard" routerLinkActive="active">Dashboard</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -6,12 +6,12 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-            <a routerLink="index" routerLinkActive="active">
+            <a routerLink="index" routerLinkActive="active" class="nav-link pl-0">
                 List Games
             </a>
         </li>
         <li class="nav-item">
-          <a routerLink="create" routerLinkActive="active">
+          <a routerLink="create" routerLinkActive="active" class="nav-link pl-0">
               Add Games
           </a>
         </li>
