--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
 <nav class="navbar navbar-expand pl-0 navbar-light bg-light">
-  <a class="navbar-brand" routerLink="dashboard" routerLinkActive="active">Dashboard</a>
+  <a class="navbar-brand" routerLink="dashboard" routerLinkActive="active">COOP</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
+        <!-- 
         <li class="nav-item active">
             <a routerLink="index" routerLinkActive="active" class="nav-link pl-0">
                 List Games
@@ -15,9 +16,21 @@
               Add Games
           </a>
         </li>
+        <li class="nav-item">
+            <a routerLink="project" routerLinkActive="active" class="nav-link pl-0">
+                Projects
+            </a>
+          </li>
+          -->
+          <li class="nav-item">
+              <a routerLink="depositos" routerLinkActive="active" class="nav-link pl-0">
+                  Depositos
+              </a>
+            </li>
       </ul>
   </div>
 </nav>
 <div class="container">
+  <flash-messages></flash-messages>
   <router-outlet></router-outlet>
 </div>
