--- a/src/app/depositos/deposito-create/deposito-create.component.html
+++ b/src/app/depositos/deposito-create/deposito-create.component.html
@@ -24,7 +24,7 @@
         </div>
         <div class="form-group row">
             <label for="inputValor" class="col-sm-2 col-form-label col-form-label-sm">Valor</label>
-            <div class="col-sm-10 active-cyan-3 active-cyan-4 mb-4">
+            <div class="col-sm-10">
                 <input type="text" class="form-control form-control-sm" id="inputValor" placeholder="Valor deposito">
             </div>
         </div>
