config create deposito

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,6 +31,11 @@
   </div>
 </nav>
 <div class="container">
-  <flash-messages></flash-messages>
+  <ng-http-loader></ng-http-loader>
   <router-outlet></router-outlet>
 </div>
+<div class="container">
+    <footer>
+        <flash-messages></flash-messages>
+    </footer>
+  </div>
