--- a/src/app/depositos/deposito-create/deposito-create.component.html
+++ b/src/app/depositos/deposito-create/deposito-create.component.html
@@ -1,43 +1,46 @@
-<div class="container">
-    <form>
-        <div class="form-group row">
-            <label for="example-search-input" class="col-sm-2 col-form-label col-form-label-sm">Cedula</label>
-            <div class="input-group col-sm-10">
-                <input class="form-control py-2 border-right-0 border" type="search" value="search"
-                    id="example-search-input">
-                <span class="input-group-append">
-                    <button class="btn btn-outline-secondary border-left-0 border" type="button">
-                        <i class="fa fa-search"></i>
-                    </button>
-                    
-                </span>
-            </div>
-        </div>
-        <div>
+<div class="container p-3">
+    <fieldset class="col-8 col-md-6 px-3">
+        <legend>Nuevo deposito:</legend>
+        <form [formGroup]="formGroup">
+            <div class="form-group row">
+                <label for="example-search-input" class="col-sm-2 col-form-label col-form-label-sm">Cedula</label>
+                <div class="input-group col-sm-10">
+                    <input class="form-control form-control-sm py-2 border-right-0 border" name="txtCedula"
+                        formControlName="cedula" type="search" value="search" id="txtCedula" #cedula>
+                    <span class="input-group-append">
+                        <button class="btn btn-sm btn-outline-secondary border-left-0 border" type="button"
+                            (click)="readPersonaByCedula()">
+                            <i class="fa fa-search"></i>
+                        </button>
 
-        </div>
-        <div class="form-group row">
-            <label for="disabledTextInput" class="col-sm-2 col-form-label col-form-label-sm">Nombre</label>
-            <div class="col-sm-10">
-                <input type="text" id="disabledTextInput" class="form-control form-control-sm" disabled placeholder="">
+                    </span>
+                </div>
             </div>
-        </div>
-        <div class="form-group row">
-            <label for="inputValor" class="col-sm-2 col-form-label col-form-label-sm">Valor</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control form-control-sm" id="inputValor" placeholder="Valor deposito">
+
+            <div class="form-group row">
+                <label for="disabledTextInput" class="col-sm-2 col-form-label col-form-label-sm">Nombre</label>
+                <div class="col-sm-10">
+                    <input type="text" id="disabledTextInput"
+                        class="form-control form-control-sm form-control-plaintext" disabled placeholder="N/D" readonly
+                        value="{{ persona?.primernombre }} {{ persona?.segundonombre }} {{ persona?.primerapellido }} {{ persona?.segundoapellido }}">
+                </div>
             </div>
-        </div>
-        <div class="form-group row">
-            <label for="inputValor" class="col-sm-2 col-form-label col-form-label-sm">Fecha</label>
-            <div class="col-sm-10">
-                <input type="date" class="form-control form-control-sm" id="inputValor" placeholder="YYYY-MM-DD"
-                    required data-date-format="yyyy-MM-dd">
+            <div class="form-group row">
+                <label for="inputValorDeposito" class="col-sm-2 col-form-label col-form-label-sm">Valor deposito</label>
+                <div class="col-sm-10">
+                    <input type="number" class="form-control form-control-sm" id="inputValorDeposito"
+                        placeholder="Valor deposito" formControlName="valordeposito">
+                </div>
             </div>
-        </div>
-        <fieldset class="form-group">
-            <div class="row">
-                <legend class="col-form-label col-form-label-sm col-sm-2 pt-0">Tipo</legend>
+            <div class="form-group row">
+                <label for="inputValor" class="col-sm-2 col-form-label col-form-label-sm">Fecha</label>
+                <div class="col-sm-10">
+                    <input type="date" class="form-control form-control-sm" id="inputValor" placeholder="YYYY-MM-DD"
+                        required data-date-format="yyyy-MM-dd" formControlName="fechadeposito">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputValor" class="col-sm-2 col-form-label col-form-label-sm">Tipo</label>
                 <div class="col-sm-10">
                     <div class="form-check form-check-sm">
                         <input class="form-check-input form-check-input-sm" type="radio" name="gridRadios"
@@ -53,12 +56,13 @@
                         </label>
                     </div>
                 </div>
+
             </div>
-        </fieldset>
-        <div class="form-group row">
-            <div class="col-sm-12">
-                <button type="submit" class="btn btn-sm btn-primary">Guardar</button>
+            <div class="form-group row">
+                <div class="col-sm-12">
+                    <button type="submit" class="btn btn-sm btn-primary" (click)="saveDeposito()">Guardar</button>
+                </div>
             </div>
-        </div>
-    </form>
+        </form>
+    </fieldset>
 </div>
