--- a/src/app/depositos/deposito/deposito.component.html
+++ b/src/app/depositos/deposito/deposito.component.html
@@ -1,56 +1,58 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
-  <a class="navbar-brand" href="#">Depositos</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/depositos/list" routerLinkActive="active">List<span
-            class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/depositos/create" routerLinkActive="active">Create</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/depositos/update" routerLinkActive="active">Update</a>
-      </li>
-    </ul>
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <span class="navbar-text">
-          Lista de depositos 
-        </span>
-        <i class="fa fa-check"></i>
-      </li>
-      <li>
+<div class="container">
+  <nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <a class="navbar-brand" href="#">Depositos</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+      aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="/depositos/list" routerLinkActive="active">List<span
+              class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/depositos/create" routerLinkActive="active">Create</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/depositos/update" routerLinkActive="active">Update</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <span class="navbar-text">
+            Lista de depositos
+          </span>
+          <i class="fa fa-check"></i>
+        </li>
+        <li>
           <a class="btn btn-default" (click)="buscarDepositos()" aria-label="Settings">
             <i class="fa fa-refresh" aria-hidden="true"></i>
           </a>
-      </li>
-      <li>
+        </li>
+        <li>
           <button (click)="buscarDepositos()">
-              <i class="fa fa-refresh" aria-hidden="true"></i>
+            <i class="fa fa-refresh" aria-hidden="true"></i>
           </button>
-      </li>
-      <li>
+        </li>
+        <li>
           <a href="#" class="btn btn-success btn-sm">
-              <span class="glyphicon glyphicon-print"></span> Print 
-            </a>
-      </li>
-      <li>
+            <span class="glyphicon glyphicon-print"></span> Print
+          </a>
+        </li>
+        <li>
           <button id="btnFA" class="btn btn-primary btn-sm">
-              <i class="fa fa-server"></i>
-              I'm a Button!        
-            </button>
-      </li>
-      <li>
+            <i class="fa fa-server"></i>
+            I'm a Button!
+          </button>
+        </li>
+        <li>
           <a class="btn btn-default btn-sm" href="#">
-              <i class="fa fa-cog"></i> Settings</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+            <i class="fa fa-cog"></i> Settings</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
+</div>
