--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,15 @@
     font-size: 0.7rem;
 }
 
-input {
-	font-size: 0.5rem;
+.fontsizeb {
+    font-size: 11px;
+    font-weight: bold;
+}
+
+.form-check-label {
+    font-size: 11px;
+}
+.col-form-label{
+    font-size: 11px;
+    font-weight: bold;
 }
