config depositos search

--- a/src/app/depositos/deposito/deposito.component.html
+++ b/src/app/depositos/deposito/deposito.component.html
@@ -9,14 +9,20 @@
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" routerLink="/depositos/list" routerLinkActive="active">List<span
-                class="sr-only">(current)</span></a>
+            <a class="nav-link" routerLink="/depositos/list" routerLinkActive="active">List
+              <i class="fa fa-list" aria-hidden="true"></i>
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/depositos/create" routerLinkActive="active">Create</a>
+            <a class="nav-link" routerLink="/depositos/create" routerLinkActive="active">
+              Create
+              <i class="fa fa-file-text-o" aria-hidden="true"></i>
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/depositos/update" routerLinkActive="active">Update</a>
+            <a class="nav-link" routerLink="/depositos/update" routerLinkActive="active">Update
+              <i class="fa fa-pencil" aria-hidden="true"></i>              
+            </a>
           </li>
         </ul>
         <ul class="navbar-nav">
