--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,12 @@
               <a routerLink="depositos" routerLinkActive="active" class="nav-link pl-0">
                   Depositos
               </a>
-            </li>
+          </li>
+          <li class="nav-item">
+              <a routerLink="example" routerLinkActive="active" class="nav-link pl-0">
+                  Example
+              </a>
+          </li>
       </ul>
   </div>
 </nav>
