--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,16 @@
                   Example
               </a>
           </li>
+          <li class="nav-item">
+              <a routerLink="example2" routerLinkActive="active" class="nav-link pl-0">
+                  Example2
+              </a>
+          </li>
+          <li class="nav-item">
+                <a routerLink="example3" routerLinkActive="active" class="nav-link pl-0">
+                    Example3
+                </a>
+            </li>
       </ul>
   </div>
 </nav>
