--- a/src/app/depositos/deposito-create/deposito-create.component.html
+++ b/src/app/depositos/deposito-create/deposito-create.component.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="form-group row">
-                <label for="inputValor" class="col-sm-2 col-form-label col-form-label-sm fontsizeb">Tipo</label>
+                <label for="gridRadios1" class="col-sm-2 col-form-label col-form-label-sm fontsizeb">Tipo</label>
                 <div class="col-sm-10">
                     <div class="form-check form-check-sm">
                         <input class="form-check-input form-check-input-sm" type="radio" name="tipodeposito"
