--- a/src/app/depositos/deposito/deposito.component.html
+++ b/src/app/depositos/deposito/deposito.component.html
@@ -24,6 +24,11 @@
               <i class="fa fa-pencil" aria-hidden="true"></i>              
             </a>
           </li>
+          <li class="nav-item">
+              <a class="nav-link" routerLink="/depositos/cuotas" routerLinkActive="active">Cuotas
+                <i class="fa fa-pencil" aria-hidden="true"></i>              
+              </a>
+            </li>
         </ul>
         <ul class="navbar-nav">
           <li>
