--- a/src/app/depositos/deposito-list/deposito-list.component.html
+++ b/src/app/depositos/deposito-list/deposito-list.component.html
@@ -36,8 +36,8 @@
     </div>
 </form>
 
-<table class="table table-hover table-sm table-condensed">
-    <thead>
+<table class="table table-hover table-sm table-condensed table-striped">
+    <thead class="thead-light">
         <tr>
             <th>Cedula</th>
             <th>Nombre</th>
