--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,20 +28,11 @@
               </a>
           </li>
           <li class="nav-item">
-              <a routerLink="example" routerLinkActive="active" class="nav-link pl-0">
-                  Example
-              </a>
+            <a routerLink="pagos" routerLinkActive="active" class="nav-link pl-0">
+                Pagos
+            </a>
           </li>
-          <li class="nav-item">
-              <a routerLink="example2" routerLinkActive="active" class="nav-link pl-0">
-                  Example2
-              </a>
-          </li>
-          <li class="nav-item">
-                <a routerLink="example3" routerLinkActive="active" class="nav-link pl-0">
-                    Example3
-                </a>
-            </li>
+          
       </ul>
   </div>
 </nav>
