--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
               </a>
           </li>
           <li class="nav-item">
-            <a routerLink="pagos" routerLinkActive="active" class="nav-link pl-0">
+            <a routerLink="pagospage" routerLinkActive="active" class="nav-link pl-0">
                 Pagos
             </a>
           </li>
@@ -44,4 +44,4 @@
     <footer>
         <flash-messages></flash-messages>
     </footer>
-  </div>
+</div>
