--- a/src/app/depositos/deposito/deposito.component.html
+++ b/src/app/depositos/deposito/deposito.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="rowxxx">
+<div>
+  <div class="row">
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <a class="navbar-brand" href="#">Depositos</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
@@ -40,7 +40,8 @@
         </ul>
       </div>
     </nav>
-
-    <router-outlet></router-outlet>
+  </div>
+  <div>
+      <router-outlet></router-outlet>
   </div>
 </div>
