--- a/src/app/depositos/modalpago/modalpago.component.html
+++ b/src/app/depositos/modalpago/modalpago.component.html
@@ -10,27 +10,27 @@
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="textValorCuota" class="col-sm-4 col-form-label col-form-label-sm">Cuota:</label>
-                    <div class="input-group col-sm-8">
+                    <div class="labelItem col-sm-8">
                         {{ pago.descripcioncuota }}
                     </div>
                 </div>
                 <div class="form-group col-md-6">
-                    <label for="textValorCuota" class="col-sm-4 col-form-label col-form-label-sm">Valor cuota:</label>
-                    <div class="input-group col-sm-8">
-                        {{ pago.codigocuota }}
+                    <label for="textValorCuota" class="col-sm-6 col-form-label col-form-label-sm">Valor cuota:</label>
+                    <div class="labelItem col-sm-6">
+                        {{ pago.valorcuota }}
                     </div>
                 </div>
             </div>
             <div class="form-row">
                 <div class="form-group col-md-6">
-                    <label for="textValorCuota" class="col-sm-4 col-form-label col-form-label-sm">Lote:</label>
-                    <div class="input-group col-sm-8">
+                    <label for="textValorCuota" class="col-sm-6 col-form-label col-form-label-sm">Lote:</label>
+                    <div class="input-group col-sm-6 labelItem">
                             {{pago.codigoreferencia}}
                     </div>
                 </div>
                 <div class="form-group col-md-6">
                     <label for="textValorCuota" class="col-sm-4 col-form-label col-form-label-sm">Dueño:</label>
-                    <div class="input-group col-sm-8">
+                    <div class="input-group col-sm-8 labelItem">
                             {{ this.pago.primerapellido }} {{ this.pago.segundoapellido }} {{ this.pago.primernombre }} {{ this.pago.segundonombre }}
                     </div>
                 </div>
@@ -66,8 +66,8 @@
                     </div>
                 </div>
                 <div class="form-group col-md-6">
-                    <label for="textValorDeposito" class="col-sm-4 col-form-label col-form-label-sm">Valor deposito:</label>
-                    <div class="input-group col-sm-8">
+                    <label for="textValorDeposito" class="col-sm-6 col-form-label col-form-label-sm">Valor deposito:</label>
+                    <div class="input-group col-sm-6">
                         {{ modelDeposito?.valordeposito }}
                     </div>
                 </div>
