--- a/src/app/depositos/pagos/pagos.component.html
+++ b/src/app/depositos/pagos/pagos.component.html
@@ -31,7 +31,7 @@
     </div>
 </form>
 
-<table class="table table-hover table-sm table-condensed table-striped">
+<table class="table table-hover table-sm table-bordered table-condensed table-striped">
     <thead class="thead-light">
         <tr>
             <th>Nombre</th>
@@ -73,6 +73,7 @@
         </tr>
     </tbody>
 </table>
+
 
 <!-- Modal pago cuota lote -->
 <app-modalpago></app-modalpago>
