--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,47 +1,34 @@
-<nav class="navbar navbar-expand pl-0 navbar-light bg-light">
-  <a class="navbar-brand" routerLink="dashboard" routerLinkActive="active">COOP</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <!-- 
-        <li class="nav-item active">
-            <a routerLink="index" routerLinkActive="active" class="nav-link pl-0">
-                List Games
-            </a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="create" routerLinkActive="active" class="nav-link pl-0">
-              Add Games
-          </a>
-        </li>
-        <li class="nav-item">
-            <a routerLink="project" routerLinkActive="active" class="nav-link pl-0">
-                Projects
-            </a>
-          </li>
-          -->
-          <li class="nav-item">
-              <a routerLink="depositos" routerLinkActive="active" class="nav-link pl-0">
-                  Depositos
-              </a>
-          </li>
-          <li class="nav-item">
-            <a routerLink="pagospage" routerLinkActive="active" class="nav-link pl-0">
-                Pagos
-            </a>
-          </li>
-          
-      </ul>
+<div class="w-100">
+    <div class="w-100">
+      <nav class="navbar navbar-expand pl-0 navbar-light bg-light">
+        <a class="navbar-brand" routerLink="dashboard" routerLinkActive="active">COOP</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a routerLink="depositos" routerLinkActive="active" class="nav-link pl-0">
+                        Depositos
+                    </a>
+                </li>
+                <li class="nav-item">
+                  <a routerLink="pagospage" routerLinkActive="active" class="nav-link pl-0">
+                      Pagos
+                  </a>
+                </li>
+                
+            </ul>
+        </div>
+      </nav>
+    </div>
+  <div class="w-100" style="margin: 1px;">
+    <ng-http-loader></ng-http-loader>
+    <router-outlet></router-outlet>
   </div>
-</nav>
-<div class="container">
-  <ng-http-loader></ng-http-loader>
-  <router-outlet></router-outlet>
-</div>
-<div class="container">
-    <footer>
-        <flash-messages></flash-messages>
-    </footer>
+  <div class="w-100">
+      <footer>
+          <flash-messages></flash-messages>
+      </footer>
+  </div>
 </div>
