--- a/src/app/pagospage/pagospage.component.html
+++ b/src/app/pagospage/pagospage.component.html
@@ -1,5 +1,5 @@
-<div>
-    <div class="row">
+<div class="w-100">
+    <div class="w-100">
         <nav class="navbar navbar-expand-sm navbar-light bg-light">
             <a class="navbar-brand" href="#">Pagos cuotas</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
