--- a/src/app/depositos/deposito-create/deposito-create.component.html
+++ b/src/app/depositos/deposito-create/deposito-create.component.html
@@ -1,5 +1,5 @@
-<div class="container p-3">
-    <fieldset class="col-8 col-md-6 px-3">
+<div class="container p-1">
+    <fieldset class="col-12">
         <legend>Nuevo deposito:</legend>
         <form [formGroup]="formGroup">
             <div class="form-group row">
@@ -72,7 +72,51 @@
                         </label>
                     </div>
                 </div>
+            </div>
 
+            <ng-template #rt let-r="result" let-t="term" style="size: 11px;">
+                <tr style="font-size: 11px;">
+                    <td style="width: 100px; margin-left: 10px; margin-right: 10px;"> {{ r.cedula }} </td>
+                    <td style="width: 150px; margin-left: 10px; margin-right: 11px;"> {{ r.primerapellido }} {{ r.primernombre }} </td>
+                </tr>
+            </ng-template>
+
+            <div class="form-group row">
+                <label for="txtSocio" class="col-sm-2 col-form-label col-form-label-sm fontsizeb">Socios lotes</label>
+                <div class="col-sm-9">
+                    <input 
+                        class="form-control form-control-sm py-2 border" 
+                        name="txtSocio"
+                        id="txtSocio" 
+                        type="text"                             
+                        formControlName="socio"
+                        [ngbTypeahead]="searchSocio" 
+                        [resultTemplate]="rt"
+                        [inputFormatter]="inputFormatSocioListValue" 
+                        (selectItem)="selectedSocio($event)"
+                        (focus)="focusSocio$.next($event.target.value)"
+                        (click)="clickSocio$.next($event.target.value)"
+                        #instanceSocio="ngbTypeahead" 
+                        placeholder="Apellido socio"
+                        >
+                </div>
+                <div class="col-sm-1">
+                    <a class="btn btn-sm btn-default float-left align-top form-control-sm" 
+                        (click)="addSocioLote()"
+                        aria-label="Settings">
+                        <i class="fa fa-user-plus" aria-hidden="true"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="txtSocios" class="col-sm-2 col-form-label col-form-label-sm fontsizeb">Socios</label>
+                <div class="col-sm-10">
+                        <ul>
+                            <li *ngFor="let s of socios; let i = index">
+                                {{i+1}}: {{s.cedula}} - {{s.primernombre}} {{s.primerapellido}}
+                            </li>
+                        </ul>
+                </div>               
             </div>
             <div class="form-group row">
                 <div class="col-sm-12">
