--- a/src/app/depositos/deposito-create/deposito-create.component.html
+++ b/src/app/depositos/deposito-create/deposito-create.component.html
@@ -111,16 +111,26 @@
             <div class="form-group row">
                 <label for="txtSocios" class="col-sm-2 col-form-label col-form-label-sm fontsizeb">Socios</label>
                 <div class="col-sm-10">
-                        <ul>
-                            <li *ngFor="let s of socios; let i = index">
-                                {{i+1}}: {{s.cedula}} - {{s.primernombre}} {{s.primerapellido}}
-                            </li>
-                        </ul>
+                        <table style="font-size: 10px;">
+                            <tr *ngFor="let s of socios; let i = index">
+                                <td style="padding-right: 20px;">{{i+1}}</td>
+                                <td style="padding-right: 20px;">{{s.cedula}}</td>
+                                <td style="padding-right: 20px;">{{s.primernombre}} {{s.primerapellido}}</td>
+                                <td style="padding-right: 20px;">
+                                    <a class="btn btn-sm btn-default float-left align-top form-control-sm" 
+                                        (click)="removeSocioLote(s)"
+                                        aria-label="Settings">
+                                        <i class="fa fa-trash" aria-hidden="true"></i>
+                                    </a>
+                                </td>
+                            </tr>
+                        </table>
                 </div>               
             </div>
             <div class="form-group row">
                 <div class="col-sm-12">
                     <button type="submit" class="btn btn-sm btn-primary" (click)="saveDeposito()">Guardar</button>
+                    <button type="button" class="btn btn-sm btn-primary" (click)="cancelDeposito()">Cancelar</button>
                 </div>
             </div>
         </form>
