--- a/src/app/depositos/modalpago/modalpago.component.html
+++ b/src/app/depositos/modalpago/modalpago.component.html
@@ -68,7 +68,7 @@
                 <div class="form-group col-md-6">
                     <label for="textValorDeposito" class="col-sm-6 col-form-label col-form-label-sm">Valor deposito:</label>
                     <div class="input-group col-sm-6">
-                        {{ modelDeposito?.valordeposito }}
+                            {{ modelDeposito?.valordeposito }} <span style="color: forestgreen; padding-left: 5px;">({{  modelDeposito?.valorpendientedeposito}})</span>
                     </div>
                 </div>
             </div>
@@ -82,9 +82,9 @@
                     </div>
                 </div>
                 <div class="form-group col-md-6">
-                    <label for="textValorPagoCuotaLote" class="col-sm-4 col-form-label col-form-label-sm">Valor deposito:</label>
+                    <label for="textValorPagoCuotaLote" class="col-sm-4 col-form-label col-form-label-sm">Valor pago cuota (Pagado):</label>
                     <div class="input-group col-sm-8">
-                            {{ valorpagocuotaloteTotal }} / {{ pago.valorcuota }}
+                            <span style="color: forestgreen; padding-left: 5px;">{{ valorpagocuotaloteTotal }}</span>  <span style="padding-left: 5px;">({{ pago.valorcuota }})</span>
                     </div>
                 </div>
             </div>
